[gd_scene load_steps=10 format=2]

[ext_resource path="res://DJ.gd" type="Script" id=1]
[ext_resource path="res://bgm/Slime-Water.mp3" type="AudioStream" id=2]
[ext_resource path="res://bgm/Slime-Base.mp3" type="AudioStream" id=3]
[ext_resource path="res://bgm/Slime-Fire.mp3" type="AudioStream" id=4]
[ext_resource path="res://bgm/Slime-Wind.mp3" type="AudioStream" id=5]
[ext_resource path="res://bgm/Slime-Lightning.mp3" type="AudioStream" id=6]
[ext_resource path="res://bgm/Slime-Plant.mp3" type="AudioStream" id=7]
[ext_resource path="res://bgm/Slime-Cloud.mp3" type="AudioStream" id=8]
[ext_resource path="res://bgm/Slime-Earth.mp3" type="AudioStream" id=9]

[node name="DJ" type="Node"]
script = ExtResource( 1 )

[node name="songs" type="Node" parent="."]

[node name="base" type="AudioStreamPlayer" parent="songs"]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="WATER" type="AudioStreamPlayer" parent="songs"]
stream = ExtResource( 2 )
volume_db = -15.0

[node name="FIRE" type="AudioStreamPlayer" parent="songs"]
stream = ExtResource( 4 )
volume_db = -15.0

[node name="WIND" type="AudioStreamPlayer" parent="songs"]
stream = ExtResource( 5 )
volume_db = -15.0

[node name="CLOUD" type="AudioStreamPlayer" parent="songs"]
stream = ExtResource( 8 )
volume_db = -15.0

[node name="LIGHTNING" type="AudioStreamPlayer" parent="songs"]
stream = ExtResource( 6 )
volume_db = -15.0

[node name="EARTH" type="AudioStreamPlayer" parent="songs"]
stream = ExtResource( 9 )
volume_db = -15.0

[node name="WOOD" type="AudioStreamPlayer" parent="songs"]
stream = ExtResource( 7 )
volume_db = -15.0

[node name="TweenCrossCurr" type="Tween" parent="."]

[node name="TweenCrossNext" type="Tween" parent="."]

[connection signal="tween_completed" from="TweenCrossCurr" to="." method="_on_TweenCrossCurr_tween_completed"]
